sfdc_enterprise_42demo - SANDBOX/src/objects/CAA_Mapping_Item__c.object
<CustomObject>
    <description>Stored field mappings for Copy Anything Anywhere</description>
    <fields>
        <fullName>CAA_Configuration__c</fullName>
        <label>CAA Configuration</label>
        <referenceTo>CAA_Configuration__c</referenceTo>
        <relationshipLabel>CAA Mapping Items</relationshipLabel>
        <relationshipName>CAA_Mapping_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Hardcoded_Value__c</fullName>
        <inlineHelpText>Value that will be used to populate the target field. The target field MUST be a text or picklist field and not exceed 255 characters.

Either a Hard Coded Value or a Source Field is mandatory, only one of both may be provided</inlineHelpText>
        <label>Hardcoded Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <inlineHelpText>API Name of the field in the source object

Either a Hard Coded Value or a Source Field is mandatory, only one of both may be provided</inlineHelpText>
        <label>Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <inlineHelpText>API Name of the field in the target object</inlineHelpText>
        <label>Target Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CAA Mapping Item</label>
    <nameField>
        <displayFormat>CAAMI-{0000000}</displayFormat>
        <label>CAA Mapping Item Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAA Mapping Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Use_Id_as_a_Target</fullName>
        <active>true</active>
        <description>ID is not allowed as a target</description>
        <errorConditionFormula>LOWER(Target_Field__c) = &apos;id&apos;</errorConditionFormula>
        <errorMessage>Id cannot be the target field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hardcoded_Value_Not_Allowed_On_Dedupe</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(Hardcoded_Value__c )),
 CAA_Configuration__r.Dedupe_Field_Name__c = Hardcoded_Value__c 
)</errorConditionFormula>
        <errorDisplayField>Hardcoded_Value__c</errorDisplayField>
        <errorMessage>Deduplication field in target cannot be mapped to a hardcoded value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Source_Field_Or_Value_Mandatory</fullName>
        <active>true</active>
        <description>Checks if either Source_Field__c or Hardcoded_Value__c is set, and not both</description>
        <errorConditionFormula>OR(
AND(ISBLANK( Hardcoded_Value__c ) , ISBLANK( Source_Field__c )),
AND(NOT(ISBLANK( Hardcoded_Value__c )) , NOT(ISBLANK( Source_Field__c )))
)</errorConditionFormula>
        <errorMessage>You need to provide either a Source Field, or a Hardcoded Value</errorMessage>
    </validationRules>
</CustomObject>